--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,7 +24,7 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #f57803,
+  primary:    #ff4e00,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
@@ -34,7 +34,7 @@ $colors: (
 
 $text-color:                 #fff !default;
 $link-color:                 color($colors, primary) !default;
-$background-color:           #191919 !default;
+$background-color:           #353535 !default;
 $subdued-text-color:         #666 !default;
 
 $font-family-base:           -apple-system, "Helvetica Neue", "Roboto", sans-serif !default;
