--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -1,3 +1,12 @@
 page-main {
 
 }
+
+.item-checkbox {
+    width:200px;
+    border-top: 0px;
+    padding-bottom: 0px;
+}
+   .item-checkbox:first-child {
+       float:right;
+}
