--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content">
+<ion-menu [content]="content" type="overlay">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menu</ion-title>
@@ -7,6 +7,13 @@
 
   <ion-content>
     <ion-list>
+      <a ion-item (click)="openPage(account_page)">
+        <ion-avatar item-left>
+          <img src="{{user.photo || 'https://img.clipartfest.com/0a8ebfb4a70e557d07de12bce05cf5a8_male-silhouette-man-head-clipart-silhouette_1280-1024.jpeg'}}">
+        </ion-avatar>
+        <h2>{{ user.first_name }} {{ user.last_name }}</h2>
+        <p>Account Settings</p>
+      </a>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
       </button>
