--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,7 +7,7 @@
 
   <ion-content>
     <ion-list>
-      <a ion-item (click)="openPage(account_page)">
+      <a menuClose ion-item (click)="openPage(account_page)">
         <ion-avatar item-left>
           <img src="{{user.photo || 'https://img.clipartfest.com/0a8ebfb4a70e557d07de12bce05cf5a8_male-silhouette-man-head-clipart-silhouette_1280-1024.jpeg'}}">
         </ion-avatar>
