--- a/src/pages/info/info.scss
+++ b/src/pages/info/info.scss
@@ -1,5 +1,20 @@
 page-info {
 	ion-slides {
-		max-height: 300px
+		border: 10px solid black;
+		max-height: 300px;
 	}
+
+	ion-list {
+		padding: 0;
+	}
+
+	p.review {
+		color: white
+	}
+
+	p.price {
+		color: white;
+		display: inline;
+	}
+
 }
