--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,7 +14,8 @@
         <h2>{{ user.first_name }} {{ user.last_name }}</h2>
         <p>Account Settings</p>
       </a>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+      <button menuClose ion-item icon-left *ngFor="let p of pages" (click)="openPage(p)">
+        <ion-icon name="{{p.icon}}"></ion-icon>
         {{p.title}}
       </button>
     </ion-list>
