--- a/src/pages/info/info.scss
+++ b/src/pages/info/info.scss
@@ -3,8 +3,17 @@ page-info {
 		/*border: 10px solid black;*/
 		/*text-align: center;*/
 		/*position: absolute;*/
-		max-height: 300px;
-		vertical-align: middle;
+		/*max-height: 300px;
+		vertical-align: middle;*/
+		/*position: relative;*/
+        height:300px;
+        width: 100%;
+        overflow: hidden;
+        display: flex;
+    	padding: 15px 12px;
+    	box-sizing: border-box;
+    	/*width: 400px; height: 200px;*/
+
 	}
 
 	/*.slider-img {
@@ -20,7 +29,14 @@ page-info {
 	.slide-image {
 	    max-height: 50%;
 	    max-width: 60%;
-	    margin: 18px 0;
+	    /*margin-top: 10px;*/
+	    margin: auto;
+	    /*width: 100%;*/
+    	/*height: auto;*/
+    	/*overflow: hidden;*/
+    	/*height: 100px;*/
+  		/*width: 100px;*/
+ 		/*-o-object-fit: contain;*/
 	}
 
 	ion-list {
