change background of cards to be lighter

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -58,6 +58,11 @@ $list-text-color:            $text-color !default;
 $list-background-color:      #353535 !default;
 $list-border-color:          #000 !default;
 
+/*$card-background-color:		 #4F4E4E !default;*/
+$card-ios-background-color:  #494949 !default;
+$card-md-background-color:   #494949 !default;
+$card-wp-background-color:   #494949 !default;
+
 
 // App iOS Variables
 // --------------------------------------------------
