Search for restaurants

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,7 +9,7 @@
     <ion-list>
       <a menuClose ion-item (click)="openPage(account_page)">
         <ion-avatar item-left>
-          <img src="{{user.photo_url || 'https://img.clipartfest.com/0a8ebfb4a70e557d07de12bce05cf5a8_male-silhouette-man-head-clipart-silhouette_1280-1024.jpeg'}}">
+          <img src="{{user.photo_url || 'assets/imgs/person.png'}}">
         </ion-avatar>
         <h2>{{ user.first_name }} {{ user.last_name }}</h2>
         <p>Account Settings</p>
