--- a/src/pages/display/display.scss
+++ b/src/pages/display/display.scss
@@ -16,6 +16,10 @@ page-display {
 		height: 90%;
 	}
 
+	#messages ion-card {
+		text-align: center;
+	}
+
 	.like {
 		position: fixed;
 		top: 25%;
